--- a/Personal.html
+++ b/Personal.html
@@ -7,6 +7,7 @@
     <title> Thomas Nguyen </title>
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="Stylesheet.css">
+	<link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
   </head>
 
   <body data-spy="scroll">
@@ -57,9 +58,9 @@
 
 	<!-- Fun Facts -->
 		<div class="row">
-			<div class="col-sm-6 col-md-4">
+			<div class="col-sm-4 col-md-4">
 				<div class="thumbnail">
-					<img src="img/49ers.png" alt="49ers Logo">
+					<img src="img/49ers.PNG" alt="49ers Logo">
 					<div class="caption">
 		    			<h3>49ers</h3>
 		    			<p>
@@ -71,9 +72,9 @@
 				</div>
 			</div>
 
-			<div class="col-sm-6 col-md-4">
+			<div class="col-sm-4 col-md-4">
 				<div class="thumbnail">
-					<img src="img/ManU.png" alt="Manchester United Logo">
+					<img src="img/ManU.PNG" alt="Manchester United Logo">
 					<div class="caption">
 		    			<h3>Manchester United</h3>
 		    			<p>
@@ -86,7 +87,7 @@
 				</div>
 			</div>
 
-			<div class="col-sm-6 col-md-4">
+			<div class="col-sm-4 col-md-4">
 				<div class="thumbnail">
 					<img src="img/Curry.jpg" alt="Warriors Logo">
 					<div class="caption">
@@ -102,7 +103,7 @@
 		</div>
 
 		<div class="row">
-			<div class="col-sm-6 col-md-4">
+			<div class="col-sm-4 col-md-4">
 				<div class="thumbnail">
 					<img src="img/volunteering.jpg" alt="Volunteering Picture">
 					<div class="caption">
@@ -116,7 +117,7 @@
 				</div>
 			</div>
 
-			<div class="col-sm-6 col-md-4">
+			<div class="col-sm-4 col-md-4">
 				<div class="thumbnail">
 					<img src="img/17mile.jpg" alt="Photography Picture">
 					<div class="caption">
@@ -130,7 +131,7 @@
 				</div>
 			</div>
 			
-			<div class="col-sm-6 col-md-4">
+			<div class="col-sm-4 col-md-4">
 				<div class="thumbnail">
 					<img src="img/cooking.jpg" alt="Cooking Picture">
 					<div class="caption">
