--- a/Personal.html
+++ b/Personal.html
@@ -7,7 +7,7 @@
     <title> Thomas Nguyen </title>
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="Stylesheet.css">
-	<link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
+	<link href="favicon.png" rel="shortcut icon" type="image/x-icon" />
   </head>
 
   <body data-spy="scroll">
