--- a/Home.html
+++ b/Home.html
@@ -8,12 +8,13 @@
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="Stylesheet.css">
 	<link href="favicon.png" rel="shortcut icon" type="image/x-icon" />
+	<link href='https://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
   </head>
 
   <body data-spy="scroll">
 
   	<!-- Navigation -->
-	<nav class="navbar navbar-inverse navbar-fixed-top">
+	<nav class="navbar navbar-fixed-top">
 		<div class="container-fluid">
 			<div class="navbar-header">
 				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
@@ -47,15 +48,8 @@
 	<!-- Jumbotron -->
 	<div class="jumbotron">
 		<div class="container">
-			<h1>Hello!</h1>
-  			<p>
-  				Student at Santa Clara University
-  				<br>
-  				studying computer science and engineering
-  				<br>
-  				and this is my online journal.
-  			</p>
-			<p><a class="btn btn-primary btn-lg page-scroll" href="#about" role="button">Learn more</a></p>
+			<h1>Inquisitive,<br> Adaptive, <br>Goal Oriented</h1>
+			<p><a class="btn btn-primary btn-lg page-scroll" href="#about" role="button">Find out more</a></p>
 		</div>
 	</div>
 
@@ -68,7 +62,7 @@
 			<p>
 			Welcome! 
 			<br><br>
-			Here you'll find things like the latest projects I've been working on, or maybe just my favorite sports team! Everything you'll need to find can be accessed through the navigation bar
+			I'm Thomas Nguyen and I'm currently a Sophomore studying Computer Science and Engineering at Santa Clara University. Here on my website you'll be able to take a peak at my work and see for yourself how I express myself. Hopefully you can find something useful or read something interesting. Enjoy!
 			</p>
 		</div>
 	</div>
