--- a/Portfolio.html
+++ b/Portfolio.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="Stylesheet.css">
 	<link href="favicon.png" rel="shortcut icon" type="image/x-icon" />
+	<link href='https://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
 	<style>
 		.carousel-inner > .item > img,
   		.carousel-inner > .item > a > img {
@@ -19,7 +20,7 @@
 	
 	<body>
   	<!-- Navigation -->
-	<nav class="navbar navbar-inverse navbar-fixed-top">
+	<nav class="navbar navbar-fixed-top">
 		<div class="container-fluid">
 			<div class="navbar-header">
 				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
