--- a/Portfolio.html
+++ b/Portfolio.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title> Thomas Nguyen | Portfolio</title>
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="Stylesheet.css">
+	<link rel="stylesheet" href="animate.min.css">
 	<link href="favicon.png" rel="shortcut icon" type="image/x-icon" />
 	<link href='https://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
 	<style>
@@ -18,7 +20,7 @@
   	</style>
 	</head>
 	
-	<body>
+	<body class="animated fadeIn">
   	<!-- Navigation -->
 	<nav class="navbar navbar-fixed-top">
 		<div class="container-fluid">
