--- a/Home.html
+++ b/Home.html
@@ -6,12 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title> Thomas Nguyen </title>
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="Stylesheet.css">
+	<link rel="stylesheet" href="animate.min.css">
 	<link href="favicon.png" rel="shortcut icon" type="image/x-icon" />
 	<link href='https://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
   </head>
 
-  <body data-spy="scroll">
+  <body data-spy="scroll" class="animated fadeIn">
 
   	<!-- Navigation -->
 	<nav class="navbar navbar-fixed-top">
@@ -64,6 +66,28 @@
 			<br><br>
 			I'm Thomas Nguyen and I'm currently a Sophomore studying Computer Science and Engineering at Santa Clara University. Here on my website you'll be able to take a peak at my work and see for yourself how I express myself. Hopefully you can find something useful or read something interesting. Enjoy!
 			</p>
+			<br><br><br>
+		</div>
+	</div>
+	<div id="contact">
+		<div class="page-header">
+			<h1>Contact<small></small></h1>
+		</div>
+		<div class="container-fluid">
+			<div class="row">
+				<div class="col-xs-12 col-md-3">
+					<a href="https://www.facebook.com/toemasssss"><i class="fa fa-facebook-square"></i></a>
+				</div>
+				<div class="col-xs-12 col-md-3">
+					<a href="https://www.linkedin.com/in/thomasnguyenscu"><i class="fa fa-linkedin-square"></i></a>
+				</div>
+				<div class="col-xs-12 col-md-3">
+					<a href="https://github.com/thomasvn"><i class="fa fa-github-square"></i></a>
+				</div>
+				<div class="col-xs-12 col-md-3">
+					<a href="https://www.flickr.com/photos/thomasnphotography/"><i class="fa fa-flickr"></i></a>
+				</div>
+			</div>
 		</div>
 	</div>
 
