--- a/Personal.html
+++ b/Personal.html
@@ -37,7 +37,7 @@
 	</nav>
 
 	<!-- About -->
-	<div id="about">
+	<div id="personal">
 		<div class="page-header">
 			<h1>About<small></small></h1>
 		</div>
