Responsiveness to Home Page
Inclusion of Responsive.css

--- a/Experience.html
+++ b/Experience.html
@@ -7,10 +7,11 @@
     <title> Thomas Nguyen </title>
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+	<link href='https://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="Stylesheet.css">
+	<link rel="stylesheet" type="text/css" href="Responsive.css">
 	<link rel="stylesheet" href="animate.min.css">
 	<link href="favicon.png" rel="shortcut icon" type="image/x-icon" />
-	<link href='https://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
   </head>
 
   <body data-spy="scroll" class="animated fadeIn">
