--- a/Home.html
+++ b/Home.html
@@ -7,10 +7,11 @@
     <title> Thomas Nguyen </title>
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+	<link href='https://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="Stylesheet.css">
+	<link rel="stylesheet" type="text/css" href="Responsive.css">
 	<link rel="stylesheet" href="animate.min.css">
 	<link href="favicon.png" rel="shortcut icon" type="image/x-icon" />
-	<link href='https://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
   </head>
 
   <body data-spy="scroll" class="animated fadeIn">
@@ -24,7 +25,7 @@
 					<span class = "icon-bar"></span>
 					<span class = "icon-bar"></span>
 				</button>
-				<a class="active navbar-brand page-scroll" href=".jumbotron">Thomas Nguyen</a>
+				<a class="active navbar-brand page-scroll" href=".opening">Thomas Nguyen</a>
 			</div>
 			<div class="collapse navbar-collapse navbar-left navbar-main-collapse">
 			  <ul class="nav navbar-nav">
@@ -33,22 +34,11 @@
 			    <li><a href="Portfolio.html">Portfolio</a></li> 
 			  </ul>
 			</div>
-
-	<!-- Unused Search Bar -->
-<!--
-			<form class="navbar-form navbar-right" role="search">
-				<div class="form-group">
-					<input type="text" class="form-control" placeholder="Search">
-				</div>
-			<button type="submit" class="btn btn-default">Search</button>
-			</form>
--->
-
 		</div>
 	</nav>
 
-	<!-- Jumbotron -->
-	<div class="jumbotron">
+	<!-- Opening page -->
+	<div class="opening">
 		<div class="container">
 			<h1>Inquisitive,<br> Adaptive, <br>Goal Oriented</h1>
 			<p><a class="btn btn-primary btn-lg page-scroll" href="#about" role="button">Find out more</a></p>
@@ -75,16 +65,16 @@
 		</div>
 		<div class="container-fluid">
 			<div class="row">
-				<div class="col-xs-12 col-md-3">
+				<div class="col-xs-6 col-md-3">
 					<a href="https://www.facebook.com/toemasssss"><i class="fa fa-facebook-square"></i></a>
 				</div>
-				<div class="col-xs-12 col-md-3">
+				<div class="col-xs-6 col-md-3">
 					<a href="https://www.linkedin.com/in/thomasnguyenscu"><i class="fa fa-linkedin-square"></i></a>
 				</div>
-				<div class="col-xs-12 col-md-3">
+				<div class="col-xs-6 col-md-3">
 					<a href="https://github.com/thomasvn"><i class="fa fa-github-square"></i></a>
 				</div>
-				<div class="col-xs-12 col-md-3">
+				<div class="col-xs-6 col-md-3">
 					<a href="https://www.flickr.com/photos/thomasnphotography/"><i class="fa fa-flickr"></i></a>
 				</div>
 			</div>
