--- a/Experience.html
+++ b/Experience.html
@@ -20,11 +20,9 @@
 	<nav class="navbar navbar-fixed-top">
 		<div class="container-fluid">
 			<div class="navbar-header">
-				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
-                    <span class = "icon-bar"></span>
-                    <span class = "icon-bar"></span>
-                    <span class = "icon-bar"></span>
-                </button>
+		        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
+			          <span class = "glyphicon glyphicon-menu-hamburger"></span>
+			    </button>
 				<a class="navbar-brand" href="Home.html">Thomas Nguyen</a>
 			</div>
 			<div class="collapse navbar-collapse navbar-left navbar-main-collapse">
