--- a/Portfolio.html
+++ b/Portfolio.html
@@ -7,7 +7,8 @@
     <title> Thomas Nguyen | Portfolio</title>
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-	<link href='https://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Asap' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Flamenco' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="Stylesheet.css">
 	<link rel="stylesheet" type="text/css" href="Responsive.css">
 	<link rel="stylesheet" href="animate.min.css">
