--- a/Experience.html
+++ b/Experience.html
@@ -7,8 +7,8 @@
     <title> Thomas Nguyen </title>
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-	<link href='https://fonts.googleapis.com/css?family=Asap' rel='stylesheet' type='text/css'>
-	<link href='https://fonts.googleapis.com/css?family=Flamenco' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="Stylesheet.css">
 	<link rel="stylesheet" type="text/css" href="Responsive.css">
 	<link rel="stylesheet" href="animate.min.css">
@@ -43,10 +43,10 @@
 		</div>
 		<div class="container-fluid">
 			<div class="row">
-				<div class="col-md-6">
-					<img src="img/iD_Tech.png" class="img-responsive center-block vcenter">
+				<div class="col-xs-4 col-md-6">
+					<img src="img/iD_Tech.png" class="img-responsive center-block vcenter" id="w1">
 				</div>
-				<div class="col-md-6">
+				<div class="col-xs-8 col-md-6">
 					<h1 class="text-center">iD Tech Camps</h1>
 					<p class="text-justify"> 
 					Working at Santa Clara University iD Tech during the summer of 2015, I served as a Tech Coordinator as well as an Instructor. 
@@ -67,21 +67,21 @@
 		</div>
 		<div class="container-fluid">
 			<div class="row">
-				<div class="col-md-6">
-					<img src="img/BroncoHacks.png" class="img-responsive center-block vcenter">
+				<div class="col-xs-4 col-md-6">
+					<img src="img/BroncoHacks.png" class="img-responsive center-block vcenter" id="p1">
 				</div>
-				<div class="col-md-6">
+				<div class="col-xs-8 col-md-6">
 					<h1 class="text-center">BroncoHacks</h1>
 					<p class="text-justify">BroncoHacks was an open-ended hackathon that allowed participants' innovative minds to roam free. I worked with in a group of 5 to develop a website called roommatefindr.com which allowed users to take a survey and locate people who would be willing to share a roof within their target areas.</p>
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-md-6">
+				<div class="col-xs-8 col-md-6">
 					<h1 class="text-center">Hack for the Homeless</h1>
 					<p class="text-justify"> Hack for the Homeless was an event held early in 2015 that was aimed towards developing apps to help homeless people who were distributed cell phones. With a group of 4 others, our team aimed to develop an app that would allow homeless people to ping locations and descriptions and display them on a RSS feed that would tell other homeless people in the community where and when certain events were taking place -- for example clothing distribution.
 				</div>
-				<div class="col-md-6">
-					<img id="photo" src="img/hfth.png" class="img-responsive center-block vcenter">
+				<div class="col-xs-4 col-md-6">
+					<img src="img/hfth.png" class="img-responsive center-block vcenter" id="p2">
 				</div>
 			</div>
 		</div>
