--- a/Experience.html
+++ b/Experience.html
@@ -78,15 +78,66 @@
 			<div class="row">
 				<div class="col-xs-8 col-md-6">
 					<h1 class="text-center">Hack for the Homeless</h1>
-					<p class="text-justify"> Hack for the Homeless was an event held early in 2015 that was aimed towards developing apps to help homeless people who were distributed cell phones. With a group of 4 others, our team aimed to develop an app that would allow homeless people to ping locations and descriptions and display them on a RSS feed that would tell other homeless people in the community where and when certain events were taking place -- for example clothing distribution.
+					<p class="text-justify"> Hack for the Homeless was an event held early in 2015 that was aimed towards developing apps to help homeless people who were distributed cell phones. With a group of 4 others, our team aimed to develop an app that would allow homeless people to ping locations and descriptions and display them on a RSS feed that would tell other homeless people in the community where and when certain events were taking place -- for example clothing distribution. </p>
 				</div>
 				<div class="col-xs-4 col-md-6">
 					<img src="img/hfth.png" class="img-responsive center-block vcenter" id="p2">
 				</div>
 			</div>
 		</div>
-	</div>	
+	</div>
 
+	<!-- School Labs -->
+	<div id="labs">
+		<div class="page-header">
+			<h1>Labs<small></small></h1>
+		</div>
+		<div class="container-fluid">
+			<div class="row">
+				<div class="col-xs-6 col-md-6">
+					<h1 class="text-center">Abstract Data Type/Data Structures</h1>
+					<li>Count</li>
+					<li>Table</li>
+					<li>Deque</li>
+					<li>Deque in C++</li>
+					<li>Sorted</li>
+					<li>Unsorted</li>
+					<li>Radix</li>
+					<li>Tree</li>
+					<li>Huffman</li>
+				</div>
+				<div class="col-xs-6 col-md-6">
+					<h1 class="text-center">Advanced Programming</h1>
+					<li>Posterized and Negative</li>
+					<li>Greyscale and Sepia</li>
+					<li>Hue Saturation and Value</li>
+					<li>Brightness and Contrast</li>
+					<li>Double or Half Images</li>
+					<li>Horizontal and Vertical Mirrors</li>
+					<li>Horizontal and Vertical Mirrors using Multi-Thread</li>
+					<li>Adjusting Bass and Treble</li>
+					<li>Manipulating Linked Lists of Audio</li>
+					<li>Removing Silence from Audio</li>
+					<li>Shuffle Playlist</li>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-xs-6 col-md-6">
+					<h1 class="text-center">Intro to Programming</h1>
+					<li>Multiplication Game</li>
+					<li>Reservation System Version 1</li>
+					<li>Reservation System Version 2</li>
+					<li>Reservation System Version 3</li>
+					<li>Reservation System Version 4</li>
+					<li>Reservation System Version 5</li>
+					<li>Reservation System Version 6</li>
+				</div>
+				<div class="col-xs-6 col-md-6">
+					
+				</div>
+			</div>
+		</div>
+	</div>	
 	
 
 	<!-- core jquery & js -->
