Minor Navbar Changes

--- a/test.html
+++ b/test.html
@@ -7,7 +7,8 @@
     <title> Thomas Nguyen </title>
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-  <link href='https://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="Stylesheet.css">
   <link rel="stylesheet" type="text/css" href="Responsive.css">
   <link rel="stylesheet" href="animate.min.css">
@@ -27,9 +28,9 @@
       </div>
       <div class="collapse navbar-collapse navbar-left navbar-main-collapse">
         <ul class="nav navbar-nav">
-          <li><a href="Personal.html">Personal</a></li>
-          <li><a href="Experience.html">Experience</a></li> 
-          <li><a href="Portfolio.html">Portfolio</a></li> 
+          <li><a href="Personal.html" class="navbar-link">Personal</a></li>
+          <li><a href="Experience.html" class="navbar-link">Experience</a></li> 
+          <li><a href="Portfolio.html" class="navbar-link">Portfolio</a></li> 
         </ul>
       </div>
     </div>
