--- a/Experience.html
+++ b/Experience.html
@@ -9,9 +9,9 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
-	<link rel="stylesheet" type="text/css" href="Stylesheet.css">
-	<link rel="stylesheet" type="text/css" href="Responsive.css">
-	<link rel="stylesheet" href="animate.min.css">
+	<link rel="stylesheet" type="text/css" href="style/Stylesheet.css">
+	<link rel="stylesheet" type="text/css" href="style/Responsive.css">
+	<link rel="stylesheet" href="style/animate.min.css">
 	<link href="favicon.png" rel="shortcut icon" type="image/x-icon" />
   </head>
 
@@ -56,6 +56,20 @@
 					Serving as an Instructor, I taught Robotics, Scratch Programming with JavaScript, and Mobile Game Design. Each of these courses were one week long consisting of eight students. Throughout the week I introduced them to the foundations pertaining to their course and helped guide them to create a final project! 
 					</p>
 				</div>
+                <div class="row">
+				<div class="col-xs-8 col-md-6">
+					<h1 class="text-center">Subber</h1>
+					<p class="text-justify"> 
+                    Subber is a startup based in the SF Bay Area that aims to fill a niche in the fast growing subscription box industry. Rather than having a customer set up a user account on every subscription box’s website, they can simply create one account at Subber and immediately subscribe to a variety of subscription boxes with a click of a button. 
+                    <br> <br>
+                    As a full stack developer on the team, my focus is to construct and refine the website. This requires working with its host server to manage data as well as enhancing the user interface of the website.
+                    </p>
+				</div>
+				<div class="col-xs-4 col-md-6">
+					<img src="img/Subber.jpg" class="img-responsive center-block vcenter" id="w2">
+				</div>
+                </div>
+			</div>
 			</div>
 		</div>
 	</div>
