Changed to index

--- a/Experience.html
+++ b/Experience.html
@@ -24,7 +24,7 @@
 		        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
 			          <span class = "glyphicon glyphicon-menu-hamburger"></span>
 			    </button>
-				<a class="navbar-brand" href="Home.html">Thomas Nguyen</a>
+				<a class="navbar-brand" href="index.html">Thomas Nguyen</a>
 			</div>
 			<div class="collapse navbar-collapse navbar-left navbar-main-collapse">
 			  <ul class="nav navbar-nav">
